Version 0.3.0: Java 17, change interfaces, refactorings